# synthetic-model

./: README.md  pyproject.toml
syntheticModel/: __init__.py
synthetic_model/: __init__.py  _chimney.py  _data.py  _deposit.py  _erode_flat.py  _erode_river.py  _event.py  _fault.py  _gaussian.py  _model_noise.py  _regField.py  _salt.py  _simplex_noise.py  _sinc_table.py  _squish.py  _synthetic_model.py
unit-tests/: CMakeLists.txt  basicTest.cc  blob_test.py  depositTest.cc  deposit_test.py  fault_and_squish_tutorial.ipynb  fault_test.py  fault_tutorial.ipynb  geoModel_test.py  rgt_test.py  rgt_tutorial.ipynb  squish_test.py
