[project]

name='synthetic_model'
version='0.1.4'
description='A library for creating synthetic model'

authors=[
    {name="Bob Clapp", email="bob@sep.stanford.edu"}
]

maintainesr=[
    "bob@sep.stanford.edu"
]
dependencies=[ 'holoviews>=1.14.1', 'scipy>=1.6.2','opensimplex>=0.4.2',
'h5py==2.10.0', 'selenium==4.3.0','holoviews==1.14.6',
      'sep_python @ git+https://github.com/SEP-software/sep-python.git@931c4a3219f3f1ebdd25e2738842be3b9bad2ada'
            ]


[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

