[project]

name='synthetic_model'
version='0.1.5'
description='A library for creating synthetic model'

authors=[
    {name="Bob Clapp", email="bob@sep.stanford.edu"}
]

maintainesr=[
    "bob@sep.stanford.edu"
]
dependencies=[ 'holoviews>=1.14.1', 'scipy>=1.6.2','opensimplex>=0.4.2',
'selenium==4.3.0','holoviews==1.14.6',
      'sep_python @ git+https://github.com/SEP-software/sep-python.git@c06ba273907f40afd209da775875e58c743035d9'
            ]


[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

